--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,9 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ffd161</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="divideline">#e9e9e9</color>
+    <color name="myyellow">#ffd161</color>
 </resources>
