注册界面完成

--- a/app/src/main/res/layout/activity_register_layout.xml
+++ b/app/src/main/res/layout/activity_register_layout.xml
@@ -45,6 +45,7 @@
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:background="@null"
+            android:maxLength="11"
             android:hint="请输入手机号"
             android:inputType="phone"
             android:singleLine="true"
@@ -148,6 +149,7 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:background="@drawable/login_btn_unable"
+            android:enabled="false"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:text="获取短信验证码"
