--- a/app/src/main/res/layout/activity_login_layout.xml
+++ b/app/src/main/res/layout/activity_login_layout.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="登录"
-            android:textColor="@color/black"
+            android:textColor="@color/textblack"
             android:textSize="16dp" />
 
         <View
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="注册"
-            android:textColor="@color/black"
+            android:textColor="@color/textblack"
             android:textSize="16dp" />
     </LinearLayout>
 
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="账号"
-            android:textColor="@color/black" />
+            android:textColor="@color/textblack" />
 
         <EditText
             android:id="@+id/et_account"
@@ -86,7 +86,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="密码"
-            android:textColor="@color/black" />
+            android:textColor="@color/textblack" />
 
         <EditText
             android:id="@+id/et_password"
