--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#ffd161</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="textblack">#333333</color>
+    <color name="grayblack">#666666</color>
     <color name="divideline">#e9e9e9</color>
     <color name="myyellow">#ffd161</color>
 </resources>
