--- a/app/src/main/res/layout/activity_register_layout.xml
+++ b/app/src/main/res/layout/activity_register_layout.xml
@@ -32,45 +32,46 @@
         android:background="@color/white"
         android:gravity="center"
         android:orientation="horizontal"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
 
 
         <TextView
             android:id="@+id/tv_step1"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="1输入手机号"
+            android:gravity="center"
+            android:padding="5dp"
             android:textColor="@color/textblack"
             android:textSize="14dp" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="20dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:src="@drawable/right_arrow" />
 
         <TextView
             android:id="@+id/tv_step2"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="2输入验证码"
+            android:gravity="center"
             android:textColor="@color/grayblack"
             android:textSize="14dp" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="20dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:src="@drawable/right_arrow" />
 
         <TextView
             android:id="@+id/tv_step3"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:gravity="center"
             android:text="3设置密码"
             android:textColor="@color/grayblack"
             android:textSize="14dp" />
@@ -129,7 +130,6 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@null"
-                android:enabled="false"
                 android:hint="请求输入短信验证码"
                 android:paddingLeft="10dp"
                 android:textSize="16dp" />
@@ -140,6 +140,7 @@
                 android:layout_height="30dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/login_btn_unable"
+                android:enabled="false"
                 android:paddingLeft="30dp"
                 android:paddingRight="30dp"
                 android:text="重新获取"
