--- a/app/src/main/res/layout/activity_register_layout.xml
+++ b/app/src/main/res/layout/activity_register_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#efefef"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <LinearLayout
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="注册"
-            android:textColor="@color/textblack"
+            android:textColor="@color/black"
             android:textSize="16dp" />
 
 
@@ -27,188 +27,152 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/white"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp">
-
+        android:padding="15dp">
 
         <TextView
-            android:id="@+id/tv_step1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1输入手机号"
-            android:gravity="center"
-            android:padding="5dp"
-            android:textColor="@color/textblack"
-            android:textSize="14dp" />
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:src="@drawable/right_arrow" />
-
-        <TextView
-            android:id="@+id/tv_step2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2输入验证码"
-            android:gravity="center"
-            android:textColor="@color/grayblack"
-            android:textSize="14dp" />
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/right_arrow" />
-
-        <TextView
-            android:id="@+id/tv_step3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="3设置密码"
-            android:textColor="@color/grayblack"
-            android:textSize="14dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_step1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        android:visibility="visible">
+            android:text="手机号"
+            android:textColor="@color/textblack" />
 
         <EditText
             android:id="@+id/et_phone"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/white"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@null"
             android:hint="请输入手机号"
             android:inputType="phone"
             android:maxLength="11"
-            android:paddingLeft="10dp"
             android:singleLine="true"
             android:textSize="16dp" />
-
-
-        <Button
-            android:id="@+id/btn_sendcode"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_margin="15dp"
-            android:background="@drawable/login_btn_unable"
-            android:enabled="false"
-            android:text="发送验证码"
-            android:textColor="@color/white"
-            android:textSize="16dp" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/divideline" />
 
     <LinearLayout
-        android:id="@+id/ll_step2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:orientation="vertical"
-        android:visibility="gone">
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="15dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/white"
-            android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="密码"
+            android:textColor="@color/textblack" />
 
-            <EditText
-                android:id="@+id/et_code"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@null"
-                android:hint="请求输入短信验证码"
-                android:paddingLeft="10dp"
-                android:textSize="16dp" />
-
-            <Button
-                android:id="@+id/btn_getcode"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_marginRight="20dp"
-                android:background="@drawable/login_btn_unable"
-                android:enabled="false"
-                android:paddingLeft="30dp"
-                android:paddingRight="30dp"
-                android:text="重新获取"
-                android:textColor="@color/white"
-                android:textSize="16dp" />
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/btn_commitcode"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_margin="15dp"
-            android:background="@drawable/login_btn_unable"
-            android:enabled="false"
-            android:text="提交验证码"
-            android:textColor="@color/white"
+        <EditText
+            android:id="@+id/et_password"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:hint="请输入密码"
+            android:inputType="textPassword"
+            android:maxLength="15"
+            android:singleLine="true"
             android:textSize="16dp" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/divideline" />
 
     <LinearLayout
-        android:id="@+id/ll_step3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        android:visibility="gone">
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="15dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="确认密码"
+            android:textColor="@color/textblack" />
 
         <EditText
-            android:id="@+id/et_pwd"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/white"
-            android:hint="设置密码"
-            android:inputType="phone"
-            android:maxLength="11"
-            android:paddingLeft="10dp"
+            android:id="@+id/et_repassword"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:hint="请再次输入密码"
+            android:inputType="textPassword"
+            android:maxLength="15"
             android:singleLine="true"
             android:textSize="16dp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:background="@color/divideline" />
-
-        <EditText
-            android:id="@+id/et_repwd"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/white"
-            android:hint="确认密码"
-            android:inputType="phone"
-            android:maxLength="11"
-            android:paddingLeft="10dp"
-            android:singleLine="true"
-            android:textSize="16dp" />
-
-
-        <Button
-            android:id="@+id/btn_register"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_margin="15dp"
-            android:background="@drawable/login_btn_unable"
-            android:enabled="false"
-            android:text="注册"
-            android:textColor="@color/white"
-            android:textSize="16dp" />
-
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/divideline" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="15dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="短信验证码"
+            android:textColor="@color/textblack" />
+
+        <EditText
+            android:id="@+id/et_code"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:hint="请输入短信验证码"
+            android:inputType="phone"
+            android:maxLength="6"
+            android:singleLine="true"
+            android:textSize="16dp" />
+
+        <Button
+            android:id="@+id/btn_getcode"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:background="@drawable/login_btn_unable"
+            android:enabled="false"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="获取短信验证码"
+            android:textColor="@color/white"
+            android:textSize="14dp" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/divideline" />
+
+    <Button
+        android:id="@+id/btn_register"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_margin="15dp"
+        android:background="@drawable/login_btn_unable"
+        android:enabled="false"
+        android:text="立即注册"
+        android:textColor="@color/white"
+        android:textSize="16dp" />
 </LinearLayout>
