--- a/app/src/main/res/layout/activity_findpwd_layout.xml
+++ b/app/src/main/res/layout/activity_findpwd_layout.xml
@@ -18,23 +18,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="登录"
-            android:textColor="@color/textblack"
+            android:text="找回密码"
+            android:textColor="@color/black"
             android:textSize="16dp" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
 
-        <TextView
-            android:id="@+id/tv_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="注册"
-            android:textColor="@color/textblack"
-            android:textSize="16dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -47,27 +35,21 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="账号"
+            android:text="手机号"
             android:textColor="@color/textblack" />
 
         <EditText
-            android:id="@+id/et_account"
+            android:id="@+id/et_phone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:background="@null"
-            android:hint="请输入账号"
+            android:hint="请输入手机号"
             android:inputType="phone"
+            android:maxLength="11"
             android:singleLine="true"
             android:textSize="16dp" />
-
-        <ImageView
-            android:id="@+id/iv_deleteaccount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/delete_pic"
-            android:visibility="gone" />
     </LinearLayout>
 
     <View
@@ -96,22 +78,86 @@
             android:layout_weight="1"
             android:background="@null"
             android:hint="请输入密码"
-            android:maxLength="15"
             android:inputType="textPassword"
+            android:maxLength="15"
             android:singleLine="true"
             android:textSize="16dp" />
-        <ImageView
-            android:id="@+id/iv_deletepwd"
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/divideline" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="15dp">
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/delete_pic"
-            android:layout_marginRight="10dp"
-            android:visibility="gone" />
-        <ImageView
-            android:id="@+id/iv_isshowpwd"
+            android:text="确认密码"
+            android:textColor="@color/textblack" />
+
+        <EditText
+            android:id="@+id/et_repassword"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:hint="请再次输入密码"
+            android:inputType="textPassword"
+            android:maxLength="15"
+            android:singleLine="true"
+            android:textSize="16dp" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/divideline" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="15dp">
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/passport_ic_hide_password" />
+            android:text="短信验证码"
+            android:textColor="@color/textblack" />
+
+        <EditText
+            android:id="@+id/et_code"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:hint="请输入短信验证码"
+            android:inputType="phone"
+            android:maxLength="6"
+            android:singleLine="true"
+            android:textSize="16dp" />
+
+        <Button
+            android:id="@+id/btn_getcode"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:background="@drawable/login_btn_unable"
+            android:enabled="false"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="获取短信验证码"
+            android:textColor="@color/white"
+            android:textSize="14dp" />
     </LinearLayout>
 
     <View
@@ -120,22 +166,13 @@
         android:background="@color/divideline" />
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_find"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_margin="15dp"
         android:background="@drawable/login_btn_unable"
         android:enabled="false"
-        android:text="登录"
+        android:text="找回密码"
         android:textColor="@color/white"
-        android:textSize="16dp" />
-
-    <TextView
-        android:id="@+id/tv_forgetpwd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="10dp"
-        android:text="忘记密码?"
         android:textSize="16dp" />
 </LinearLayout>
