--- a/app/src/main/res/layout/activity_login_layout.xml
+++ b/app/src/main/res/layout/activity_login_layout.xml
@@ -47,7 +47,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="账号"
+            android:text="手机号"
             android:textColor="@color/textblack" />
 
         <EditText
@@ -57,8 +57,9 @@
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:background="@null"
-            android:hint="请输入账号"
+            android:hint="请输入手机号"
             android:inputType="phone"
+            android:maxLength="11"
             android:singleLine="true"
             android:textSize="16dp" />
 
