--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="grayblack">#666666</color>
     <color name="divideline">#e9e9e9</color>
     <color name="myyellow">#ffd161</color>
+    <color name="gray_bg">#efefef</color>
+
 </resources>
