--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:overScrollMode="never"
+    android:scrollbars="none"
     android:orientation="vertical">
 
     <LinearLayout
@@ -13,6 +14,7 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/ll_userinfo"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="@color/myyellow"
@@ -36,6 +38,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_nickname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="vro12321313123"
@@ -58,6 +61,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/ll_yue"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -70,6 +74,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/tv_yue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="100"
@@ -115,6 +120,7 @@
                 android:background="@color/divideline" />
 
             <LinearLayout
+                android:id="@+id/ll_jifen"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -127,6 +133,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/tv_jifen"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="100"
@@ -168,6 +175,7 @@
 
 
         <LinearLayout
+            android:id="@+id/ll_pingjia"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="15dp"
@@ -204,6 +212,7 @@
             android:background="@color/divideline" />
 
         <LinearLayout
+            android:id="@+id/ll_shoucang"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/customer_item_bg_selector"
@@ -239,6 +248,7 @@
             android:background="@color/divideline" />
 
         <LinearLayout
+            android:id="@+id/ll_address"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/customer_item_bg_selector"
@@ -274,6 +284,7 @@
             android:background="@color/divideline" />
 
         <LinearLayout
+            android:id="@+id/ll_yaoqing"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/customer_item_bg_selector"
@@ -309,6 +320,7 @@
             android:background="@color/divideline" />
 
         <LinearLayout
+            android:id="@+id/ll_fankui"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="15dp"
@@ -345,6 +357,7 @@
             android:background="@color/divideline" />
 
         <LinearLayout
+            android:id="@+id/ll_kefu"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/customer_item_bg_selector"
@@ -380,6 +393,7 @@
             android:background="@color/divideline" />
 
         <LinearLayout
+            android:id="@+id/ll_update"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/customer_item_bg_selector"
