--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#ffd161</color>
+    <color name="transparent">#00ffffff</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="textblack">#333333</color>
