--- a/app/src/main/res/layout/activity_myaccount_layout.xml
+++ b/app/src/main/res/layout/activity_myaccount_layout.xml
@@ -7,9 +7,11 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/ll_user_icon"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginTop="10dp"
+        android:clickable="true"
         android:background="@drawable/selector_white_gray"
         android:gravity="center_vertical"
         android:orientation="horizontal">
@@ -47,8 +49,10 @@
         android:background="@color/divideline" />
 
     <LinearLayout
+        android:id="@+id/ll_nick_name"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:clickable="true"
         android:background="@drawable/selector_white_gray"
         android:gravity="center_vertical"
         android:orientation="horizontal">
@@ -64,6 +68,7 @@
             android:textSize="16dp" />
 
         <TextView
+            android:id="@+id/tv_nickname"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_marginRight="10dp"
@@ -86,6 +91,8 @@
         android:background="@color/divideline" />
 
     <LinearLayout
+        android:id="@+id/ll_pwd"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@drawable/selector_white_gray"
@@ -125,6 +132,8 @@
         android:background="@color/divideline" />
 
     <LinearLayout
+        android:clickable="true"
+        android:id="@+id/ll_phonenumber"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@drawable/selector_white_gray"
@@ -142,6 +151,7 @@
             android:textSize="16dp" />
 
         <TextView
+            android:id="@+id/tv_phonenumber"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_marginRight="10dp"
@@ -164,6 +174,7 @@
         android:layout_weight="1" />
 
     <Button
+        android:id="@+id/btn_logout"
         android:layout_width="match_parent"
         android:background="@drawable/selector_white_gray"
         android:textSize="16dp"
