--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -46,6 +46,7 @@
                     android:textSize="16dp" />
 
                 <ImageView
+                    android:id="@+id/iv_right_arrow"
                     android:layout_width="10dp"
                     android:layout_height="10dp"
                     android:layout_marginLeft="2dp"
